CruiseControl Release Notes - Latest CVS

AntBuilder & MavenBuilder:
----------------------
* When using Windows, "cmd.exe /C" is no longer prepended to the command line to avoid problems with spaces.
  This means you'll have to use 'ant.bat' or 'maven.bat' instead of just 'ant' or 'maven'!
* getCommandLineArgs now uses Commandline-class

build.xml (jsp)
----------------------
* Reverted to using 'war' as the default target instead of 'test'.
* Removed references to "**/element/" (CC-57). Patch by Jerome Lacoste

BuildQueue
----------------------
* Add support for multiple build threads (ThreadQueue). Patch by Jared Richardson

CruiseControl
----------------------
* Now obeys to Checkstyle 3.4 rules HideUtilityClassConstructor and FinalClass (CC-56). Patch by Jerome Lacoste

CruiseControlControllerAgent
----------------------
* Uses new JMXConnectorServer instead of RmiAdapter because of MX4J upgrade. Patch by Mark Doliner

cruisecontrol-jsp12.tld
----------------------
* Fix id attribute typo for LinkTag. Patch by Gareth Reakes

EmailPublisher & friends
----------------------
* Uses new EmailMapperHelper to map addresses with EmailMappers. Patch by Esa Laine (Jira CC-2)

HTMLEmailPublisher
----------------------
* Now uses default logdir "logs/<projectname>" if none is specified (CC-64)

(Link)JabberPublisher
----------------------
* Added new JabberPublisher and subclass to report buildresults through Jabber (CC-63). Patch by Jonas Edgeworth

JMX Support
----------------------
* Upgraded to MX4J 2.0.1 (including support for JSR 160)

LoggerController
----------------------
* new JMX MBean to control a Logger's logging level. A controller for the root logger is registered at startup.

MavenBuilder
----------------------
* Fix for CC-40 where download failures were treated as success. Patch by Tim Shadel

MavenSnapshotDependency
----------------------